<resources>
    <string name="app_name">Skg Guide</string>
    <string name="action_settings">Settings</string>
    <string name="sights_fragment">Sights</string>
    <string name="museums_fragment">Museums</string>
    <string name="restaurants_fragment">Restaurants</string>
    <string name="coffee_fragments">Coffee-Bars</string>
    <string name="name_object">locationName</string>
    <string name="address_object">locationAddress</string>
    <string name="desc_object">locationDescription</string>
    <string name="image_object">locationImage</string>
    <string name="website_object">locationWebsite</string>
    <string name="coordinates_object">locationCoordinates</string>
    <string name="phone_object">phoneNumber</string>
    <string name="working_hours_object">workingHours</string>
    <string name="image_info">Image</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="info_text">INFORMATION</string>
    <string name="additional_info">ADDITIONAL</string>
    <string name="name_text_view">Name of the Place</string>
    <string name="address_text_view">Address of the place</string>
    <string name="website_text_view">Website of the Place</string>
    <string name="phone_text_view">Phone number</string>
    <string name="hours_text_view">Working Hours</string>
    <string name="white_tower">White Tower</string>
    <string name="white_tower_address">Thessaloniki 54621</string>
    <string name="white_tower_info">
        Thessaloniki\’s symbol, the White Tower is a 15th century
        fortification which was part of the city’s defenses. \n\n
        The White Tower is the point where the seaward defense and the eastern wall met. \n\n
        For years it served as a prison for condemned prisoners awaiting execution. In early 1980s
        it was reconstructed and since 1985 is operating as a museum.  Today the White Tower is used
        as a place of exhibition of the Byzantine Museum of Thessaloniki. For the first months of 2002
        it housed ‘Byzantine Hours’, an exhibition devoted to ordinary life in Byzantine times.\n\n
        The first floor was presenting the “Professionals in the market place “ which actually is a
        presentation of tools and other objects belonging to goldsmiths, blade-smiths, glassmakers
        and tillers together with coins and a miniature model of Thessaloniki’s market place.\n
        The second floor was devoted to journeys and trade. Objects and texts related to journeys
        by sea and overland, fairs, spectacles and pilgrimages.\n\n
        The third floor is a presentation of the Byzantine home and its interior design, the
        decoration, supper, and the neighborhood.\n\n
        At the floor above there was an exhibition of life at home with garments and footwear,
        cosmetics, perfume and jewellery, personal grooming, and even superstitions.\n\n
        The theme of the top floor was covering burial and funerary customs.
    </string>
    <string name="white_tower_website">http://site.lpth.gr/</string>
    <string name="white_tower_coord">40.626335, 22.948628</string>
    <string name="white_tower_phone">+30 231 026 7832</string>
    <string name="white_tower_working_hours">Mon &#8211; Fri: 08:30 &#8211; 15:00</string>
    <string name="byzantine_walls">Byzantine Walls</string>
    <string name="byzantine_walls_address">Agios Pavlos, Thessaloniki 546 34</string>
    <string name="byzantine_walls_info">
        These impressive structures were built to protect the city from raids and withstand long sieges,
        something that they actually did most of the times.\n\n
        The city was initially fortified right after its foundation in the late 4th century BC but
        the present walls are dated back to the early Byzantine period around 390 AD during the reign
        of emperor Theodosius, while they still incorporate some parts of the earlier constructions.\n\n
        Their defensive abilities are quite impressive! They were 7 kilometers long while at some
        points they were up to 10 meters high and almost 5 meters thick. They were decorated with
        various symbols like suns, crosses or carved marble inscriptions near the gates.\n\n
        A number of fortresses and defensive towers were added during different periods of history
        like the Seven Towers Fortress (Heptapirgion) and the Tower Of Trigoniou located near the Acropolis.
        Several square, circle or polygon shaped towers were also built along the entire perimeter.\n\n
        The Walls were still surrounding the city until the late 19th century when large parts
        including the entire seaward section were demolished as the Ottoman authorities were trying
        to change some of the city’s urban features.
    </string>
    <string name="byzantine_walls_website">http://www.thessaloniki-sightseeing.com/index.php/en/byzantine-castles/</string>
    <string name="byzantine_walls_coord">40.6406283, 22.9579644</string>
    <string name="byzantine_walls_phone">-</string>
    <string name="byzantine_walls_hours">Everyday 24/7</string>
    <string name="arch_galerius">Arch Of Galerius</string>
    <string name="arch_galerius_address">Egnatia 144, Thessaloniki 546 22</string>
    <string name="arch_galerius_info">
        One of the most characteristic monuments of Thessaloniki is the Arch of Galerius, located on
        the upper side of the Via Egnatia, a short distance from the Rotunda. (The Rotunda is a
        building with internal niches, serving as a place of worship).\n\n
        The Arch of Galerius is a glorious monument, whose purpose was not practical, but memorial
        and honorary. It is a triumphal arch built shortly before 305 AD to honor the Roman Emperor
        Galerius, after the final victory over the Persians.  The triumphal arch that was positioned
        perpendicular to the ancient Egnatia, which crossed the city (west to east) forming a part of
        the Roman Palace of Galerius, which was developed through the current squares of Navarinou and Hippodrome.\n\n
        The construction design of the arch of Galerius was such as the two major roads to pass
        beneath it and crossed right in the middle, the current Egnatia Street and the street starting
        from the Arch and ending at the south gate of the wall of the Rotunda.
    </string>
    <string name="arch_galerius_website">http://www.inthessaloniki.com/en/arch-of-galerius</string>
    <string name="arch_galerius_coord">40.6321095, 22.9494796</string>
    <string name="arch_galerius_phone">-</string>
    <string name="arch_galerius_hours">Everyday 24/7</string>
    <string name="rotonda">Rotonda</string>
    <string name="rotonda_address">Pl. Agiou Georgiou Rotonda 5, Thessaloniki, 546 35</string>
    <string name="rotonda_info">
        <b>The famous Rotonda of Thessaloniki, Macedonia:</b> The Rotonda (or Rotunda) is one of
        the most important Roman monuments in Thessaloniki. It stands just next to the Arch of Galerius
        in the city centre and it is also known as the Church of Agios Georgios. This cylindrical structure
        was built in 306 AD by the Roman tetrarch Galerius, who intended it to be his grave. At first,
        it worked as a temple but it remains unknown to which god this temple was dedicated. \n\n
        Eventually, Galerius died in 311 AD and he was buried in Felix Romuliana, modern Serbia. In
        the 4th century AD, the Byzantine emperor Constantine I converted it into an Orthodox
        church and many frescoes were painted inside, some of which survive today on the walls of Rotonda.\n\n
        In the 14th century, the Ottomans occupied Thessaloniki and in 1590, the Rotonda was converted
        into a mosque. In fact, a minaret was added to the building that has been restored and survives
        till today. In 1912, the Greeks deliberated Thessaloniki and Rotonda was converted into an
        Orthodox church again, till 1979, when a strong earthquake caused serious damage to the structure.
        Presently, the Rotonda has been restored and works as a sculpture museum. Also, it frequently
        hosts various exhibitions.\n\n
        The Rotonda has a diameter of 24,5 metres and its walls are more than 6 metres thick, which
        has protected the monument from time, sieges and eartquakes. This is one of the oldest
        Orthodox churches and has been included in the UNESCO list of the World Heritage Sites.
        In fact, all Paleochristian and Byzantine monuments of Thessaloniki were included in this list
        in 1988.
    </string>
    <string name="rotonda_website">http://www.inthessaloniki.com/en/rotonda</string>
    <string name="rotonda_coord">40.6333007, 22.9506651</string>
    <string name="rotonda_phone">+30 231 096 8860</string>
    <string name="rotonda_hours">
        Sun/Mon/Wed/: 09:00 &#8211; 15:00 \n
        Tue &#8211; Fri: 09:00 &#8211; 20:30 </string>
    <string name="agios_dimitrios">Agios Dimitrios</string>
    <string name="agios_dimitrios_address">Agiou Dimitriou, Thessaloniki, 546 33</string>
    <string name="agios_dimitrios_info">
        Agios Dimitrios is arguably considered the most important church of Thessaloniki by the majority
        of the locals for religious, historical and artistic reasons as well. \n\n
        Devoted to the patron Saint of the city, it has a long and rich history that pretty much
        depicts some of the city\'s most important events of that shaped its identity.\n\n
        The temple is a fine sample of Byzantine religious architecture of the late early period of
        the Empire (7th century A.D.). The initial architectural design and interior decoration was
        significantly deteriorated, due to continuous reconstructions, additions and several disasters
        that occurred throughout the centuries.\n\n
        Dated back to the 4th century A.D., a small chapel was constructed over the ruins of older
        roman baths. More than a century later, the initial structure was replaced by a three aisled
        Basilica, by a prefect named Leontios, while finally reconstructed in 629 – 634 A.D., as a
        five aisled basilica.\n\n
        During the Ottoman occupation period, the church was turned into a mosque as Thessaloniki
        was captured by the ottomans. A number of mosaics and wall paintings were destroyed (1430 A.D.).
    </string>
    <string name="agios_dimitrios_website">http://www.inthessaloniki.com/en/agios-dimitrios</string>
    <string name="agios_dimitrios_coord">40.6387993, 22.9455807</string>
    <string name="agios_dimitrios_phone">+30 231 027 0008</string>
    <string name="agios_dimitrios_hours">Everyday</string>
    <string name="archaeological_museum">Archaeological Museum</string>
    <string name="archaeological_address">Manoli Andronikou 6, Thessaloniki 546 21</string>
</resources>